{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 231,
  "lineage": "0c69b586-3858-04f6-ffad-136ddaef96a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce97ff1cdada6f4f",
            "arn": "arn:aws:ec2:us-east-1:339713050718:elastic-ip/eipalloc-0ce97ff1cdada6f4f",
            "association_id": "eipassoc-0ce0fecb145c4f8f8",
            "domain": "vpc",
            "id": "eipalloc-0ce97ff1cdada6f4f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0694368229e64cb73",
            "private_dns": "ip-10-50-0-6.ec2.internal",
            "private_ip": "10.50.0.6",
            "public_dns": "ec2-54-162-61-32.compute-1.amazonaws.com",
            "public_ip": "54.162.61.32",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-nat-eip"
            },
            "tags_all": {
              "Name": "moneysplit-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:internet-gateway/igw-0b92c53f9ef6b097a",
            "id": "igw-0b92c53f9ef6b097a",
            "owner_id": "339713050718",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-igw"
            },
            "tags_all": {
              "Name": "moneysplit-igw"
            },
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce97ff1cdada6f4f",
            "association_id": "eipassoc-0ce0fecb145c4f8f8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d0999ab9b7cfee09",
            "network_interface_id": "eni-0694368229e64cb73",
            "private_ip": "10.50.0.6",
            "public_ip": "54.162.61.32",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a778da7ada17a258",
            "tags": {
              "Name": "moneysplit-nat"
            },
            "tags_all": {
              "Name": "moneysplit-nat"
            },
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bff61628149890721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d0999ab9b7cfee09",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0bff6162814989072",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0bff6162814989072"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:route-table/rtb-0bff6162814989072",
            "id": "rtb-0bff6162814989072",
            "owner_id": "339713050718",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d0999ab9b7cfee09",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moneysplit-private-rt"
            },
            "tags_all": {
              "Name": "moneysplit-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "rtb-0bff6162814989072",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:route-table/rtb-029d757a1ca96d130",
            "id": "rtb-029d757a1ca96d130",
            "owner_id": "339713050718",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b92c53f9ef6b097a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moneysplit-public-rt"
            },
            "tags_all": {
              "Name": "moneysplit-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "rtb-029d757a1ca96d130",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e919064689e91c",
            "region": "us-east-1",
            "route_table_id": "rtb-0bff6162814989072",
            "subnet_id": "subnet-0cabd0c506eb79de5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a409b0fe83969d13",
            "region": "us-east-1",
            "route_table_id": "rtb-0bff6162814989072",
            "subnet_id": "subnet-048d1d6fecf286f7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e487ed8d5c734f68",
            "region": "us-east-1",
            "route_table_id": "rtb-029d757a1ca96d130",
            "subnet_id": "subnet-0a778da7ada17a258"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8ee9b942333d83f",
            "region": "us-east-1",
            "route_table_id": "rtb-029d757a1ca96d130",
            "subnet_id": "subnet-0297aa207bc05d975"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:security-group/sg-09eaf69de7d8b2f72",
            "description": "Lambda security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eaf69de7d8b2f72",
            "ingress": [],
            "name": "moneysplit-lambda-sg",
            "name_prefix": "",
            "owner_id": "339713050718",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "moneysplit-lambda-sg"
            },
            "tags_all": {
              "Name": "moneysplit-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "sg-09eaf69de7d8b2f72",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:security-group/sg-0935ba13a2987aa8b",
            "description": "Public RDS SG (TEMP - VERY UNSAFE)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0935ba13a2987aa8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "134.190.211.245/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09eaf69de7d8b2f72"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "moneysplit-rds-sg",
            "name_prefix": "",
            "owner_id": "339713050718",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "moneysplit-rds-sg"
            },
            "tags_all": {
              "Name": "moneysplit-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "sg-0935ba13a2987aa8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:security-group/sg-0fd728f8fd42d2c42",
            "description": "Allow Lambda to reach VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd728f8fd42d2c42",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09eaf69de7d8b2f72"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "moneysplit-vpce-sg",
            "name_prefix": "",
            "owner_id": "339713050718",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "moneysplit-vpce-sg"
            },
            "tags_all": {
              "Name": "moneysplit-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "sg-0fd728f8fd42d2c42",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:subnet/subnet-0cabd0c506eb79de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.50.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cabd0c506eb79de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713050718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-private-0"
            },
            "tags_all": {
              "Name": "moneysplit-private-0"
            },
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "subnet-0cabd0c506eb79de5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:subnet/subnet-048d1d6fecf286f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.50.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d1d6fecf286f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713050718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-private-1"
            },
            "tags_all": {
              "Name": "moneysplit-private-1"
            },
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "subnet-048d1d6fecf286f7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:subnet/subnet-0a778da7ada17a258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.50.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a778da7ada17a258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713050718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-public-0"
            },
            "tags_all": {
              "Name": "moneysplit-public-0"
            },
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "subnet-0a778da7ada17a258",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:subnet/subnet-0297aa207bc05d975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0297aa207bc05d975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713050718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-public-1"
            },
            "tags_all": {
              "Name": "moneysplit-public-1"
            },
            "vpc_id": "vpc-0f48baf626eb75ee3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "subnet-0297aa207bc05d975",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713050718:vpc/vpc-0f48baf626eb75ee3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0646c5a1816565c2f",
            "default_route_table_id": "rtb-04d15fad247abe24f",
            "default_security_group_id": "sg-023460b8429958bc7",
            "dhcp_options_id": "dopt-07a03c48b7027e103",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f48baf626eb75ee3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d15fad247abe24f",
            "owner_id": "339713050718",
            "region": "us-east-1",
            "tags": {
              "Name": "moneysplit-vpc"
            },
            "tags_all": {
              "Name": "moneysplit-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713050718",
            "id": "vpc-0f48baf626eb75ee3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}